--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run", 
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "knex": "^2.0.0",
-    "sqlite3": "^5.0.8"
+    "knex": "^2.5.1",
+    "sqlite3": "^5.0.8",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
